Been trying to get JWT auth done, but been told i dont need it and its out of scope
