# app.py
@@ -6,125 +6,32 @@ from flask import render_template, Flask, jsonify, request, session, make_respon
 
 from authenticator import auth
 import config
-
+from blueprints import register_blueprints
 from models import Trail, Trail_location_Point
 from functools import wraps
 
+
 app = config.connex_app
 app.app.json.sort_keys = False
-app.add_api(config.basedir / "./")
-#
+app.add_api(config.basedir / "swagger.yml")
 
-app.app.config['SECRET_KEY'] = "<MY_SUPER_DUPER_SECRET_KEY>"
+app.app.config['SECRET_KEY'] = "MY_SUPER_DUPER_SECRET_KEY"
 
-def check_for_token(function):
-    @wraps(function)
-    def wrapped(*args, **kwargs):
-        token = request.cookies.get('token') #get token from login
 
-        if token is None:
-            return jsonify({'message' : 'Token is missing!'}), 403
-        try:
-            data = jwt.decode(token, app.app.config['SECRET_KEY'], algorithms=["HS256"])
-        except jwt.ExpiredSignatureError:
-            return jsonify({'message' : 'Token has expired!'}), 403
-        except jwt.InvalidTokenError:
-            return jsonify({'message' : 'Token is invalid!'}), 403
+#Registrin blueprints
+register_blueprints(app.app)
 
-        return function(*args, **kwargs)
-    return wrapped
 
-@app.route('/')
-def index():
-    if not session.get('logged_in'):
-        return render_template('login.html')
-    else:
-        username = session.get('username')
-        if username:
-            return 'Logged in as: '.format(session['username'])
-        else:
-            return 'Logged in, but username is missing from the session!'
 
-@app.route('/public')
-def public():
-    return 'Hello, World!'
 
-@app.route("/auth", methods=["GET"])
-@check_for_token
+
+@app.route("/")
 def home():
     trails = Trail.query.all()
 
-    return redirect("/api/ui/")
-    #return render_template("home.html", trails=trails)
+    #return redirect("/api/ui/")
+    return render_template("home.html", trails=trails)
 
-@app.route("/api/ui/")
-@check_for_token
-def the_swag():
-    return redirect("/api/ui")
-
-@app.app.before_request
-def protect_the_swag():
-    if '/api/ui/' in request.path:
-        token = request.cookies.get('token')
-        if token is None:
-            return jsonify({'message' : 'Token is missing! So you dont have permissions to be here'}), 403
-        try:
-            data = jwt.decode(token, app.app.config['SECRET_KEY'], algorithms=["HS256"])
-        except jwt.ExpiredSignatureError:
-            return jsonify({'message' : 'Session has finished, re-login or finish!'}), 403
-        except jwt.InvalidTokenError:
-            return jsonify({'message' : 'Token is invalid! So you dont have permissions to be here :('}), 403
-
-@app.app.before_request
-def protect_the_swag_endpoints():
-    if '/api/ui/' in request.path:
-        token = request.cookies.get('token')
-        if token is None:
-            return jsonify({'message' : 'Token is missing! So you dont have permissions to be here :('}), 403
-        try:
-            data = jwt.decode(token, app.app.config['SECRET_KEY'], algorithms=["HS256"])
-        except jwt.ExpiredSignatureError:
-            return jsonify({'message' : 'Session has finished, re-login or finish!'}), 403
-        except jwt.InvalidTokenError:
-            return jsonify({'message' : 'Token is invalid! So you dont have permissions to be here :('}), 403
-
-
-@app.route("/login", methods=["POST"])
-def login():
-    pwd = request.form["password"]
-    username = request.form["username"]
-
-    print(pwd)
-    print(username)
-
-    credentials = {
-        'email' : username,
-        'password' : pwd
-    }
-
-    #Authentication via dle method
-    authenticate = auth(credentials)
-
-    print(authenticate)
-
-    if authenticate == ['Verified', 'True']:
-        session["logged_in"] = True
-        session["username"] = username
-
-        expiration = datetime.datetime.utcnow() + datetime.timedelta(seconds=30)
-        token = jwt.encode({
-            "username" : username,
-            'expiration' : expiration.timestamp()},
-            app.app.config['SECRET_KEY'], algorithm="HS256"
-        )
-
-        #token in the cookie
-        response = make_response(redirect(url_for('home')))
-        response.set_cookie('token', token, httponly=True, secure=True) #turn on after development (HTTPS)
-        return response
-    else:
-        #logout()
-        return render_template('login.html', error="Invalid username or password. Please try again."), 401
 
 @app.route("/logout", methods=["GET", "POST"])
 def logout():
@@ -135,7 +42,10 @@ def logout():
 
     return response
 
+
 if __name__ == "__main__":
+    # import uvicorn
+    # uvicorn.run(app, host="0.0.0.0", port=8000)
     app.run(host="0.0.0.0", port=8000)
 
 
